# Cinema

./: CMakeLists.txt  CMakeLists.txt.user.6056cdf  README.md  apimanager.cpp  apimanager.h  app_resources.qrc  dark_style.qss  loadposter.cpp  loadposter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  moviewidget.cpp  moviewidget.h  resource.qrc  sessionwidget.cpp  sessionwidget.h  user.cpp  user.h  windowsessions.cpp  windowsessions.h
img/: images.jfif
